# models/base.go
@@ -9,17 +9,18 @@ import (
 
 func init() {
 	//dbConfig, err := config.NewConfig("ini", "conf/db.conf")
-	user := beego.AppConfig.String("db::user")
-	password := beego.AppConfig.String("db::password")
-	host := beego.AppConfig.String("db::host")
-	port := beego.AppConfig.String("db::port")
-	database := beego.AppConfig.String("db::database")
+	runMode := beego.BConfig.RunMode
+	user := beego.AppConfig.String(runMode + "::mysql_user")
+	password := beego.AppConfig.String(runMode + "::mysql_password")
+	host := beego.AppConfig.String(runMode + "::mysql_host")
+	port := beego.AppConfig.String(runMode + "::mysql_port")
+	database := beego.AppConfig.String(runMode + "::mysql_database")
 
 	dataSource := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s?charset=utf8", user, password, host, port, database)
 
 	orm.RegisterDataBase("default", "mysql", dataSource)
 
-	orm.RegisterModel(new(Draw), new(DrawPrize), new(DrawPlay), new(User))
+	orm.RegisterModel(new(Draw), new(DrawPrize), new(DrawPlay), new(User), new(DrawResult))
 	if beego.BConfig.RunMode == "dev" {
 		orm.Debug = true
 	}
