# swagger/swagger.json
@@ -124,6 +124,13 @@
                 "operationId": "DrawController.GetAll",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "token",
+                        "description": "登录凭证",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "in": "query",
                         "name": "num",
                         "description": "每页显示数",
@@ -176,6 +183,73 @@
                 }
             }
         },
+        "/draw/GetDrawContent": {
+            "get": {
+                "tags": [
+                    "draw"
+                ],
+                "description": "get Draw by id",
+                "operationId": "DrawController.GetOne",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Draw"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
+        "/draw/GetDrawInfo": {
+            "get": {
+                "tags": [
+                    "draw"
+                ],
+                "description": "get Draw by id",
+                "operationId": "DrawController.getDrawInfo",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Draw"
+                        }
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/draw/Login": {
             "post": {
                 "tags": [
@@ -218,6 +292,13 @@
                 "description": "create Draw",
                 "operationId": "DrawController.Create",
                 "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "登录凭证",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "in": "formData",
                         "name": "id",
@@ -321,43 +402,6 @@
                 }
             }
         },
-        "/draw/getInfo": {
-            "get": {
-                "tags": [
-                    "draw"
-                ],
-                "description": "get Draw by id",
-                "operationId": "DrawController.GetOne",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Draw"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            }
-        },
         "/draw/{id}": {
             "delete": {
                 "tags": [
@@ -378,6 +422,152 @@
                     "200": {
                         "description": "{string} delete success!"
                     },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
+        "/drawResult/ExportDrawInfo": {
+            "get": {
+                "tags": [
+                    "drawResult"
+                ]
+            }
+        },
+        "/drawResult/GetInfo": {
+            "get": {
+                "tags": [
+                    "drawResult"
+                ],
+                "description": "get Draw by id",
+                "operationId": "DrawResultController.GetInfo",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "userNick",
+                        "description": "The key for staticblock",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "prizeName",
+                        "description": "The key for staticblock",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "phone",
+                        "description": "The key for staticblock",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "isPrize",
+                        "description": "The key for staticblock",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sTime",
+                        "description": "The key for staticblock",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "eTime",
+                        "description": "The key for staticblock",
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
+        "/drawResult/PersonResult": {
+            "get": {
+                "tags": [
+                    "drawResult"
+                ],
+                "description": "get Draw by id",
+                "operationId": "DrawResultController.personResult",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "userId",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
+        "/drawResult/WriteOff": {
+            "post": {
+                "tags": [
+                    "drawResult"
+                ],
+                "description": "WriteOff",
+                "operationId": "DrawResultController.WriteOff",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "recordId",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "userNick",
+                        "description": "The key for staticblock",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
                     "403": {
                         "description": "id is empty"
                     }
@@ -569,6 +759,10 @@
     "tags": [
         {
             "name": "draw",
+            "description": "DrawController operations for Draw\n"
+        },
+        {
+            "name": "drawResult",
             "description": "DrawController operations for Draw\n"
         }
     ]
